<resources>
    <string name="app_name">Mobilny Trener Personalny</string>
        
    <string name="diet_settings">Ustawienia diety</string>
        
    <string name="title_activity_login">Logowanie</string>
        
    <string name="title_activity_home">Mobilny trener personalny</string>
        
    <string name="register_title">Rejestracja</string>
        
    <string name="login_title">Logowanie</string>
        
    <string name="name">Nazwa</string>
        
    <string name="email">Email</string>
        
    <string name="pwd">Hasło</string>
    <string name="btnRegister">Zarejestruj</string>
    <string name="title_activity_homeDiet">Dieta</string>
    <string name="title_activity_homeStatistics">Statystyki</string>
    <string name="title_activity_homeTraining">Trening</string>
    <string name="breakfast">Śniadanie</string>
    <string name="secondBreakfast">II Śniadanie</string>
    <string name="dinner">Obiad</string>
    <string name="afternoonSnacks">Podwieczorek</string>
    <string name="supper">Kolacja</string>
    <string name="pleaseWait">Proszę czekać</string>
    <string name="noConnectionToServer">Brak połączenia z serwerem.</string>
    <string name="serverError">Błąd serwera</string>
    <string name="unexpectedError">Nietypowy wyjątek</string>
    <string name="invalidMailFormat">Nieprawidłowy format e-mail</string>
    <string name="fillAllFields">Wypełnij wszystkie pola formularza</string>
    <string name="successLogin">Pomyślnie zalogowano!</string>
    <string name="wrongJson">Błędna odpowiedź JSON</string>
    <string name="successRegister">Pomyślnie zarejestrowano</string>
    <string name="registration">Rejestracja</string>
    <string name="login">Logowanie</string>
    <string name="successRemove">Pomyślnie usunięto</string>
    <string name="removeTitle">Usuwanie</string>
    <string name="confirmRemoveText">Czy chcesz usunąć rekord?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="search_title">Wyszukiwarka produktów</string>
    <string name="addProduct_title">Dodawanie produktu</string>
    <string name="successAdd">Pomyślnie dodano</string>
    <string name="dietSettings">Ustawienia diety</string>
    <string name="user_weight">Waga</string>
    <string name="put_weight">Podaj wagę w kg</string>
    <string name="user_age">Wiek</string>
    <string name="put_age">Podaj wiek w latach</string>
    <string name="user_activityLevel">Poziom aktywności</string>
    <string name="put_activity">Określ poziom aktywności z listy</string>
    <string name="user_target">Cel</string>
    <string name="put_target">Określ cel diety</string>
    <string name="action_settings">Ustawienia diety</string>
    <string name="user_gender">Płeć</string>
    <string name="put_gender">Określ płeć</string>
    <string name="user_height">Wzrost</string>
    <string name="put_height">Podaj wzrost w cm</string>
    <string name="squats">Przysiady</string>
    <string name="benchPress">Wyciskanie sztangi poziomo</string>
    <string name="barbellRow">Wiosłowanie</string>
    <string name="barbellCurls">Uginanie ramion ze sztangą</string>
    <string name="dips">Pompki na poręczach</string>
    <string name="trainingSquats">Ćw. 1 z 5 Przysiady</string>
    <string name="trainingBenchPress">Ćw. 2 z5 Wyciskanie sztangi poziomo</string>
    <string name="trainingBarbellRow">Ćw. 3 z 5 Wiosłowanie</string>
    <string name="trainingBarbellCurls">Ćw. 4 z 5 Uginanie ramion ze sztangą</string>
    <string name="trainingDips">Ćw. 5 z 5 Pompki na poręczach</string>
    <string name="title_exercise">Nazwa ćwiczenia</string>
    <string name="title_training">Trening</string>
    <string name="next">Następne</string>
    <string name="previous">Poprzednie</string>
    <string name="finishTraining">Zakończ trening</string>
    <string name="training_settings">Ustawienia treningu</string>
    <string name="training_completed">Zakończono trening!</string>
    <string name="trainig_gotonextexercise">Przejdź do następnego ćwiczenia!</string>
    <string name="answerno">Nie</string>
    <string name="answeryes">Tak</string>
    <string name="back">Powrót</string>
    <string name="ok">Ok</string>
    <string name="confirmendtraining">Potwierdź zakończenie treningu</string>
    <string name="confirmed">Potwierdzam</string>
    <string name="bodyMeasures">Pomiary ciała</string>
    <string name="powerMeasures">Wyniki siłowe</string>
    <string name="bicep_measure">Obwód bicepsa</string>
    <string name="put_bicep">Podaj obwód w cm</string>
    <string name="chest_measure">Obwód klatki piersiowej</string>
    <string name="waist_measure">Obwód pasa</string>
    <string name="thigh_measure">Obwód uda</string>
    <string name="updateMeasures">Aktualizacja pomiarów ciała</string>
    <string name="displayChart">Wykres</string>
    <string name="chart_title">Wykres</string>
    <string name="weight_symbol">kg</string>
    <string name="point_symbol">.</string>
    <string name="cancel">Powrót</string>

    <string-array name="spinner_unit">
        <item>g</item>
        <item>szt</item>
    </string-array>
    <string name="title_activity_diet_meal_home">DietMealHome</string>
    <string name="meal_details">Szczegóły posiłku</string>
    <string name="title_activity_training_exercise_details">TrainingExerciseDetails</string>
    <string name="neck_measure">Obwód szyi</string>
    <string name="title_activity_statistics_training_measures">StatisticsTrainingMeasures</string>

</resources>
