<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="75"
        android:dialogTitle="@string/user_weight"
        android:inputType="number"
        android:key="user_weight"
        android:summary="@string/put_weight"
        android:title="@string/user_weight" />

    <EditTextPreference
        android:defaultValue="170"
        android:dialogTitle="@string/user_height"
        android:inputType="number"
        android:key="user_height"
        android:summary="@string/put_height"
        android:title="@string/user_height" />

    <EditTextPreference
        android:defaultValue="25"
        android:dialogTitle="@string/user_age"
        android:inputType="number"
        android:key="user_age"
        android:summary="@string/put_age"
        android:title="@string/user_age" />

    <EditTextPreference
        android:defaultValue="40"
        android:dialogTitle="@string/bicep_measure"
        android:inputType="number"
        android:key="measure_bicep"
        android:summary="@string/put_bicep"
        android:title="@string/bicep_measure" />

    <EditTextPreference
        android:defaultValue="100"
        android:dialogTitle="@string/chest_measure"
        android:inputType="number"
        android:key="measure_chest"
        android:summary="@string/put_bicep"
        android:title="@string/chest_measure" />

    <EditTextPreference
        android:defaultValue="80"
        android:dialogTitle="@string/waist_measure"
        android:inputType="number"
        android:key="measure_waist"
        android:summary="@string/put_bicep"
        android:title="@string/waist_measure" />

    <EditTextPreference
        android:defaultValue="50"
        android:dialogTitle="@string/thigh_measure"
        android:inputType="number"
        android:key="measure_thigh"
        android:summary="@string/put_bicep"
        android:title="@string/thigh_measure" />

    <EditTextPreference
        android:defaultValue="50"
        android:dialogTitle="@string/neck_measure"
        android:inputType="number"
        android:key="measure_neck"
        android:summary="@string/put_bicep"
        android:title="@string/neck_measure" />

</PreferenceScreen>